Moved required splats to header for Station and Stream Reach This may help with additional concerns in #118.

--- a/_src/app/location/templates/Station.html
+++ b/_src/app/location/templates/Station.html
@@ -1,9 +1,9 @@
 <div>
-    <h4 class='heading'>Station</h4>
+    <h4 class='heading'>Station <span class="text-danger required">*</span></h4>
     <p class="help-block">Select a station by clicking on the map above.</p>
     <div class="form-inline">
         <div class="form-group">
-            <span class="text-danger required">*</span><input type='text' disabled data-dojo-attach-point='stationTxt' class='form-control'>
+            <input type='text' disabled data-dojo-attach-point='stationTxt' class='form-control'>
         </div>
         <a class="btn btn-default" data-dojo-attach-point='newStationBtn' data-toggle='modal' href='#stationModal'>
             <span class='glyphicon glyphicon-plus'></span>
