--- a/_src/app/location/templates/Location.html
+++ b/_src/app/location/templates/Location.html
@@ -2,7 +2,7 @@
     <h4>Water Body</h4>
     <div data-dojo-attach-point="verifyMap" data-dojo-type="app/location/VerifyMap" data-dojo-props="isMainMap:true" class="v-map"></div>
     <div data-dojo-type="app/location/Station" data-dojo-attach-point="station"></div>
-    <h4>Stream Reach</h4>
+    <h4>Stream Reach <span class="text-danger required">*</span></h4>
     <ul class="nav nav-pills">
         <li class="active">
             <a id="startEndTab" href="#loc_startend" data-toggle="tab">Start | End</a>
