add notification node

--- a/_src/app/habitat/templates/Habitat.html
+++ b/_src/app/habitat/templates/Habitat.html
@@ -274,6 +274,8 @@
             </div>
         </div>
     </div>
+    <div class="hidden"
+          data-dojo-attach-point="validateMsg"></div>
     <div class="row">
         <div class="col-md-12">
             <div data-dojo-attach-point="gridDiv"></div>
