--- a/_src/app/method/templates/Equipment.html
+++ b/_src/app/method/templates/Equipment.html
@@ -19,7 +19,7 @@
                 class="form-control">
             </select>
         </div>
-        <div class="form-group col-md-3">
+        <div class="form-group col-md-3 hidden">
             <label>Array Type</label>
             <select data-dojo-attach-point="arrayTypeSelect" class="form-control"></select>
         </div>
@@ -31,7 +31,7 @@
                 min="1"
                 max="20">
         </div>
-        <div class="form-group col-md-2">
+        <div class="form-group col-md-2 hidden">
             <label>Cathode Type</label>
             <select data-dojo-attach-point="cathodeTypeSelect" class="form-control"></select>
         </div>
