--- a/_src/app/templates/GridTab.html
+++ b/_src/app/templates/GridTab.html
@@ -9,7 +9,7 @@
         </label>
     </div>
     <div class="btn-group">
-        <button class="btn btn-default btn-sm"
+        <button class="btn btn-default btn-sm hidden"
             data-dojo-attach-point="removeTabBtn"
             disabled
             data-dojo-attach-event="onclick: removeTab">
