--- a/_src/app/templates/Header.html
+++ b/_src/app/templates/Header.html
@@ -12,7 +12,7 @@
         <button data-dojo-attach-point="cancelBtn" class="btn btn-default navbar-btn">Cancel</button>
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <a href="/dwrefdb/query" target="_blank">Search</a>
+                <a href="../query" target="_blank">Search</a>
             </li>
             <li>
                 <a role="button" data-toggle="modal" href="#settingsModal" class="btn btn-small pull-right">
