--- a/_src/app/location/templates/PointDef.html
+++ b/_src/app/location/templates/PointDef.html
@@ -7,13 +7,13 @@
       <span class="glyphicon glyphicon-map-marker"></span>
     </button>
     <div data-dojo-attach-point="yGroup" class="form-group">
-      <label data-dojo-attach-point="yLabel"></label>
-      <input data-dojo-attach-point="yBox" type="text" class="form-control" />
+      <label data-dojo-attach-point="yLabel" for="${id}_y"></label>
+      <input data-dojo-attach-point="yBox" type="text" class="form-control" id="${id}_y" />
       <span data-dojo-attach-point="yBoxTxt" class="help-block"></span>
     </div>
     <div data-dojo-attach-point="xGroup" class="form-group">
-      <label data-dojo-attach-point="xLabel"></label>
-      <input data-dojo-attach-point="xBox" type="text" class="form-control" />
+      <label data-dojo-attach-point="xLabel" for="${id}_x"></label>
+      <input data-dojo-attach-point="xBox" type="text" class="form-control" id="${id}_x" />
       <span data-dojo-attach-point="xBoxTxt" class="help-block"></span>
     </div>
   </div>
