--- a/_src/app/catch/templates/Tag.html
+++ b/_src/app/catch/templates/Tag.html
@@ -12,7 +12,7 @@
   <div class="row">
     <div class="form-group col-md-4">
       <label>Tag #</label>
-      <input type="text" class="form-control" data-dojo-attach-point="numberTxt" />
+      <input type="text" class="form-control" data-dojo-attach-point="numberTxt" maxlength="50" />
     </div>
     <div class="form-group col-md-3">
       <label>Color</label>
